# SLearn

./: .gitmodules  README.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json
app/src/main/cpp/engine/: CMakeLists.txt  main.cpp
app/src/main/cpp/engine/include/t760_engine/core/: Constants.h  Engine.h  Types.h
app/src/main/cpp/engine/include/t760_engine/device/: DeviceCapabilities.h  DeviceManager.h  HardwareProber.h
app/src/main/cpp/engine/include/t760_engine/memory/: CpuAllocator.h  IMemoryAllocator.h  MemoryTypes.h  UnifiedAllocator.h  VulkanAllocator.h
app/src/main/cpp/engine/include/t760_engine/model/: Model.h  ModelConfig.h  ModelLoader.h  T760FormatParser.h
app/src/main/cpp/engine/include/t760_engine/pipeline/: ExecutionScheduler.h  InferencePipeline.h  LayerExecutor.h  PipelineTypes.h
app/src/main/cpp/engine/include/t760_engine/platform/: IGpuContext.h  INpuContext.h  IPlatformBackend.h  IPlatformMemory.h
app/src/main/cpp/engine/include/t760_engine/platform/android/: AndroidGpuContext.h  AndroidNpuContext.h  AndroidNpuMemory.h  AndroidPlatformBackend.h  VulkanPlatformMemory.h
app/src/main/cpp/engine/include/t760_engine/tensor/: Tensor.h  TensorManager.h  TensorTypes.h
app/src/main/cpp/engine/src/core/: Constants.cpp  Engine.cpp
app/src/main/cpp/engine/src/device/: DeviceCapabilities.cpp  DeviceManager.cpp  HardwareProber.cpp
app/src/main/cpp/engine/src/memory/: CpuAllocator.cpp  MemoryTypes.cpp  UnifiedAllocator.cpp
app/src/main/cpp/engine/src/model/: Model.cpp  ModelConfig.cpp  ModelLoader.cpp  T760FormatParser.cpp
app/src/main/cpp/engine/src/pipeline/: ExecutionScheduler.cpp  InferencePipeline.cpp  LayerExecutor.cpp  PipelineTypes.cpp
app/src/main/cpp/engine/src/platform/android/: AndroidGpuContext.cpp  AndroidNpuContext.cpp  AndroidNpuMemory.cpp  AndroidPlatformBackend.cpp  JniBridge.cpp  VulkanPlatformMemory.cpp
app/src/main/cpp/engine/src/shaders/: matmul.comp
app/src/main/cpp/engine/src/tensor/: Tensor.cpp  TensorManager.cpp
app/src/main/java/com/slearn/: CrashHandler.java  ErrorLogger.java  GenerationController.java  MainActivity.java  NativeEngine.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
